--- a/index.html
+++ b/index.html
@@ -25,12 +25,19 @@
         background-size:contain;
         background-position: center;
         color: white;
-        background-color: #323944;
+    }
+    #brand{
+        background-image: url('swords.png');
+        background-repeat:no-repeat;
+        background-size:contain;
+        background-position: center;
+        color: white;
+        
     }
 </style>
 
 <head>
-     <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Die Dodoreiter</title>
@@ -47,7 +54,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Die Dodoreiter</a>
+            <a class="navbar-brand" href="#" id="brand">Die Dodoreiter</a>
         </div>
         <div class="collapse navbar-collapse" id="collapse">
             <ul class="nav navbar-nav">
