--- a/bestenliste.html
+++ b/bestenliste.html
@@ -1,1 +1,134 @@
-test
+<!DOCTYPE html>
+<style type="text/css">
+    #myimg {
+        background-image: url('bird.png');
+        background-repeat:no-repeat;
+        background-size:contain;
+        background-position: center;
+        color: white;
+        background-color: #323944;
+    }
+    #body {
+        background-color: #c8c8c8;
+    }
+    #modalcontent1 {
+        background-image: url('bird.png');
+        background-repeat:no-repeat;
+        background-size:contain;
+        background-position: center;
+        color: white;
+        background-color: #323944;
+    }
+    #modalcontent2 {
+        background-image: url('bird.png');
+        background-repeat:no-repeat;
+        background-size:contain;
+        background-position: center;
+        color: white;
+    }
+    #brand{
+        background-image: url('swords.png');
+        background-repeat:no-repeat;
+        background-size:contain;
+        background-position: center;
+        color: white;
+
+    }
+</style>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bestenliste</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body id="body">
+<nav id="navbaeTop" class="navbar navbar-default navbar-inverse">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#" id="brand">Die Dodoreiter</a>
+        </div>
+        <div class="collapse navbar-collapse" id="collapse">
+            <ul class="nav navbar-nav">
+                <li> <a href="https://diedodoreiter.github.io" target="_blank">Home</a></li>
+                <li class="active"><a href="https://diedodoreiter.github.io/bestenliste.html" target="_blank">Bestenliste</a></li>
+                <!--<li><a href="https://diedodoreiter.github.io/telegram.html" target="_blank">Telegram</a></li>-->
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<div class="container">
+    <div class="jumbotron" id="myimg">
+        <h1>Bestenliste</h1>
+        <table class="table table-dark" id="tableBest">
+            <thead>
+            <tr>
+                <th scope="col">Rang</th>
+                <th scope="col">Name</th>
+                <th scope="col">Datum Beitritt</th>
+                <th scope="col">Kronen insgesamt</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+</body>
+</html>
+<script>
+function compareNumbers(a, b) {
+    return a - b;
+};
+
+let allPlayer=[];
+//HERE ALL PLAYERS----------------------------------------------
+let player1={
+    name:"Exokrates",
+    crowns:123,
+    date:'1.1.18'
+};
+allPlayer.push(player1);
+
+let player2={
+    name:"3inhorn",
+    crowns:222,
+    date:'1.1.18'
+};
+allPlayer.push(player2);
+
+let player3={
+    name:"Hodenkobold",
+    crowns:234,
+    date:'1.1.18'
+};
+allPlayer.push(player3);
+
+//---------------------------------------------------------------
+let table=document.getElementById("tableBest");
+let i=1;
+allPlayer.sort(function(a, b) {
+    return b.crowns - a.crowns;
+});
+allPlayer.forEach(function (p){
+    var row = table.insertRow(i);
+    var cell1 = row.insertCell(0);
+    var cell2 = row.insertCell(1);
+    var cell3 = row.insertCell(2);
+    var cell4 = row.insertCell(3);
+    cell1.innerHTML = i;
+    cell2.innerHTML = p.name;
+    cell3.innerHTML = p.date;
+    cell4.innerHTML = p.crowns;
+    //i++
+})
+</script>
