--- a/bestenliste.html
+++ b/bestenliste.html
@@ -11,21 +11,6 @@
     #body {
         background-color: #c8c8c8;
     }
-    #modalcontent1 {
-        background-image: url('bird.png');
-        background-repeat:no-repeat;
-        background-size:contain;
-        background-position: center;
-        color: white;
-        background-color: #323944;
-    }
-    #modalcontent2 {
-        background-image: url('bird.png');
-        background-repeat:no-repeat;
-        background-size:contain;
-        background-position: center;
-        color: white;
-    }
     #brand{
         background-image: url('swords.png');
         background-repeat:no-repeat;
@@ -58,8 +43,8 @@
         </div>
         <div class="collapse navbar-collapse" id="collapse">
             <ul class="nav navbar-nav">
-                <li> <a href="https://diedodoreiter.github.io" target="_blank">Home</a></li>
-                <li class="active"><a href="https://diedodoreiter.github.io/bestenliste.html" target="_blank">Bestenliste</a></li>
+                <li> <a href="https://diedodoreiter.github.io">Home</a></li>
+                <li class="active"><a href="https://diedodoreiter.github.io/bestenliste.html">Bestenliste</a></li>
                 <!--<li><a href="https://diedodoreiter.github.io/telegram.html" target="_blank">Telegram</a></li>-->
             </ul>
         </div>
