--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         background-size:contain;
         background-position: center;
         color: white;
+        background-color: #323944;
     }
     #brand{
         background-image: url('swords.png');
@@ -32,7 +33,7 @@
         background-size:contain;
         background-position: center;
         color: white;
-        
+
     }
 </style>
 
@@ -58,8 +59,8 @@
         </div>
         <div class="collapse navbar-collapse" id="collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="https://diedodoreiter.github.io" target="_blank">Home</a></li>
-                <li><a href="https://diedodoreiter.github.io/bestenliste.html" target="_blank">Bestenliste</a></li>
+                <li class="active"><a href="https://diedodoreiter.github.io">Home</a></li>
+                <li><a href="https://diedodoreiter.github.io/bestenliste.html">Bestenliste</a></li>
                 <!--<li><a href="https://diedodoreiter.github.io/telegram.html" target="_blank">Telegram</a></li>-->
             </ul>
         </div>
@@ -123,7 +124,6 @@
                                         <li>Urlaub</li>
                                         <li>Schule</li>
                                     </ul>
-
                                 </li>
                                 <li>Ausreden werden keine zwei Wochen in Folge tolleriert.</li>
                                 <li>Ältesten ist es nicht erlaubt zu kicken, außer: </li>
