--- a/bestenliste.html
+++ b/bestenliste.html
@@ -58,10 +58,14 @@
         <table class="table table-dark" id="tableBest">
             <thead>
             <tr>
-                <th scope="col">Rang</th>
                 <th scope="col">Name</th>
-                <th scope="col">Datum Beitritt</th>
-                <th scope="col">Kronen insgesamt</th>
+                <th scope="col">Datum</th>
+                <th scope="col">Kronen für den Clan</th>
+            </tr>
+            <tr>
+                <td>Killerxd</td>
+                <td>21.01.2018</td>
+                <td>99</td>
             </tr>
             </thead>
             <tbody>
@@ -70,50 +74,3 @@
     </div>
 </body>
 </html>
-<script>
-function compareNumbers(a, b) {
-    return a - b;
-};
-
-let allPlayer=[];
-//HERE ALL PLAYERS----------------------------------------------
-let player1={
-    name:"Exokrates",
-    crowns:123,
-    date:'1.1.18'
-};
-allPlayer.push(player1);
-
-let player2={
-    name:"3inhorn",
-    crowns:222,
-    date:'1.1.18'
-};
-allPlayer.push(player2);
-
-let player3={
-    name:"Hodenkobold",
-    crowns:234,
-    date:'1.1.18'
-};
-allPlayer.push(player3);
-
-//---------------------------------------------------------------
-let table=document.getElementById("tableBest");
-let i=1;
-allPlayer.sort(function(a, b) {
-    return b.crowns - a.crowns;
-});
-allPlayer.forEach(function (p){
-    var row = table.insertRow(i);
-    var cell1 = row.insertCell(0);
-    var cell2 = row.insertCell(1);
-    var cell3 = row.insertCell(2);
-    var cell4 = row.insertCell(3);
-    cell1.innerHTML = i;
-    cell2.innerHTML = p.name;
-    cell3.innerHTML = p.date;
-    cell4.innerHTML = p.crowns;
-    //i++
-})
-</script>
