--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="container">
     <div class="jumbotron" id="myimg">
         <h1>Die Dodoreiter</h1>
-        <p>Wilkommen zur offizielen Website der Dodoreiter! Hier findet ihr alle Informationen und Richtlinien über unseren Clan. Außerdem ist unter dem Tab "Bestenliste" jedes Mitglied aufgeistet,  mit seinen gesammelten Cronen für den Clan sowie das Beitrittsdatum. Viel Spaß!</p>
+        <p>Wilkommen zur offizielen Website der Dodoreiter! Hier findet ihr alle Informationen und Richtlinien über unseren Clan. Außerdem ist unter dem Tab "Bestenliste" das Mitglied aufgelistet, das bei der Clantruhe am meisten Kronen geholt hat. Viel Spaß!</p>
     </div>
 
     <div class="row">
