--- a/index.html
+++ b/index.html
@@ -91,7 +91,17 @@
                             <h4 class="modal-title">Informationen</h4>
                         </div>
                         <div class="modal-body">
-                            <p>todo.</p>
+                             <ul >
+                              <li>Du willst unserem Clan beitreten? Das benötigst du dafür: </li>
+                                  <ul >
+                                    <li>Freundlich sein</li>
+                                     <li>Spenden</li>
+                                    <li>Aktiv</li>
+                                 </ul>
+                              <li>Jeder der die oben genannten Kriterien erfüllt ist willkommen!</li>
+                             </ul>
+                            
+                            
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Schließen</button>
@@ -131,6 +141,7 @@
                                     <li>Beleidigung im Clanchat</li>
                                 </ul>
                                 <li>Ansonsten ist das Kicken den Anführern vorenthalten.</li>
+                                <li>Der Clanchat ist kein Privatchat.</li>
                             </ul>
                         </div>
                         <div class="modal-footer">
