--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-sm-6">
             <h2>Informationen</h2>
             <p>Unter diesem Punkt werden die generellen Claninformationen beschrieben.</p>
-            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modal1">Informationen</button>
+            <button type="button" style="margin-bottom:20px" class="btn btn-warning" data-toggle="modal" data-target="#modal1">Informationen</button>
 
             <!-- Modal -->
             <div id="modal1" class="modal fade" role="dialog">
@@ -114,7 +114,7 @@
         <div class="col-sm-6">
             <h2>Richtlinien</h2>
             <p>Unter diesem Punkt werden die Clanrichtlinien beschrieben.</p>
-            <button type="button" class="btn btn-warning " data-toggle="modal" data-target="#modal2">Richtlinien</button>
+            <button type="button" style="margin-bottom:20px" class="btn btn-warning " data-toggle="modal" data-target="#modal2">Richtlinien</button>
 
             <!-- Modal -->
             <div id="modal2" class="modal fade" role="dialog">
@@ -132,7 +132,7 @@
                                     <ul >
                                         <li>Krankheit</li>
                                         <li>Urlaub</li>
-                                        <li>Schule</li>
+                                        <li>Große Prüfungen</li>
                                     </ul>
                                 </li>
                                 <li>Ausreden werden keine zwei Wochen in Folge tolleriert.</li>
@@ -140,7 +140,7 @@
                                 <ul >
                                     <li>Beleidigung im Clanchat</li>
                                 </ul>
-                                <li>Ansonsten ist das Kicken den Anführern vorenthalten.</li>
+                                <li>Ansonsten ist das Kicken den Anführern vorbehalten.</li>
                                 <li>Der Clanchat ist kein Privatchat.</li>
                             </ul>
                         </div>
