--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
         color: white;
 
     }
+    #footer{
+        position:fixed;
+        left:0px;
+        bottom:0px;
+        background-color: #323944;
+        color:white;
+        width: 100%;
+        border-top-style: solid;
+    }
+    br {
+        line-height: 20%;
+     }
 </style>
 
 <head>
@@ -43,6 +55,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Die Dodoreiter</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -71,14 +84,14 @@
 <div class="container">
     <div class="jumbotron" id="myimg">
         <h1>Die Dodoreiter</h1>
-        <p>Wilkommen zur offizielen Website der Dodoreiter! Hier findet ihr alle Informationen und Richtlinien über unseren Clan. Außerdem ist unter dem Tab "Bestenliste" das Mitglied aufgelistet, das bei der Clantruhe am meisten Kronen geholt hat. Viel Spaß!</p>
+        <p>Wilkommen zur offiziellen Website der Dodoreiter! Hier findet ihr alle Informationen und Richtlinien über unseren Clan. Außerdem ist unter dem Tab "Bestenliste" das Mitglied aufgelistet, das bei der Clantruhe am meisten Kronen geholt hat. Viel Spaß!</p>
     </div>
 
     <div class="row">
         <div class="col-sm-6">
             <h2>Informationen</h2>
             <p>Unter diesem Punkt werden die generellen Claninformationen beschrieben.</p>
-            <button type="button" style="margin-bottom:20px" class="btn btn-warning" data-toggle="modal" data-target="#modal1">Informationen</button>
+            <button type="button" style="margin-bottom:100px" class="btn btn-warning" data-toggle="modal" data-target="#modal1">Informationen</button>
 
             <!-- Modal -->
             <div id="modal1" class="modal fade" role="dialog">
@@ -100,8 +113,8 @@
                                  </ul>
                               <li>Jeder der die oben genannten Kriterien erfüllt ist willkommen!</li>
                              </ul>
-                            
-                            
+
+
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Schließen</button>
@@ -114,7 +127,7 @@
         <div class="col-sm-6">
             <h2>Richtlinien</h2>
             <p>Unter diesem Punkt werden die Clanrichtlinien beschrieben.</p>
-            <button type="button" style="margin-bottom:20px" class="btn btn-warning " data-toggle="modal" data-target="#modal2">Richtlinien</button>
+            <button type="button" style="margin-bottom:100px" class="btn btn-warning " data-toggle="modal" data-target="#modal2">Richtlinien</button>
 
             <!-- Modal -->
             <div id="modal2" class="modal fade" role="dialog">
@@ -135,9 +148,9 @@
                                         <li>Große Prüfungen</li>
                                     </ul>
                                 </li>
-                                <li>Ausreden werden keine zwei Wochen in Folge tolleriert.</li>
+                                <li>Ausreden werden keine zwei Wochen in Folge toleriert.</li>
                                 <li>Ältesten ist es nicht erlaubt zu kicken, außer: </li>
-                                <ul >
+                                <ul>
                                     <li>Beleidigung im Clanchat</li>
                                 </ul>
                                 <li>Ansonsten ist das Kicken den Anführern vorbehalten.</li>
@@ -155,4 +168,13 @@
     </div>
 </div>
 </body>
+<div id="footer">
+  <p style="margin-left:20px;margin-top:5px;"> Die Dodoreiter
+  <br>
+  Clan bei Clash Royale
+  <br>
+  <a href="http://t.me/diedodoreiter"><i class="fa fa-telegram"> Adde uns bei Telegram!</i></a>
+  </p>
+</div>
+
 </html>
