--- a/bestenliste.html
+++ b/bestenliste.html
@@ -81,6 +81,11 @@
                 <th scope="col">Kronen für den Clan</th>
             </tr>
             <tr>
+                <td>Jan</td>
+                <td>28.01.2018</td>
+                <td>126</td>
+            </tr>
+            <tr>
                 <td>Killerxd</td>
                 <td>21.01.2018</td>
                 <td>99</td>
@@ -92,30 +97,17 @@
     </div>
 </body>
 <hr id="hr">
-<h2 style="text-align: center;">Clanentwicklung:</h2>
-<canvas id="line-chart" width="800" height="450" style="margin-bottom:100px;"></canvas>
-<script>
-new Chart(document.getElementById("line-chart"), {
-  type: 'line',
-  data: {
-    labels: ['14.1.18','21.1.18',],
-    datasets: [{
-        data: [36702,35855,],
-        label: "Clantrophäen",
-        borderColor: "#404040",
-        fill: true
-      }
+<h2 style="text-align: center;">Best of:</h2>
 
-    ]
-  },
-  options: {
-    title: {
-      display: false,
-      text: 'Clanentwicklung'
-    }
-  }
-});
-</script>
+<iframe width="420" height="345" src="https://www.youtube.com/watch?v=jc_bGfCqeX8">
+</iframe>
+
+<iframe width="420" height="345" src="https://www.youtube.com/watch?v=stRfkynR34A&t=47s">
+</iframe>
+
+<iframe width="420" height="345" src="https://www.youtube.com/watch?v=988xRZyaGMs">
+</iframe>
+
 <div id="footer">
   <p style="margin-left:20px;margin-top:5px;"> Die Dodoreiter
   <br>
