--- a/bestenliste.html
+++ b/bestenliste.html
@@ -99,14 +99,11 @@
 <hr id="hr">
 <h2 style="text-align: center;">Best of:</h2>
 
-<iframe width="420" height="345" src="https://www.youtube.com/watch?v=jc_bGfCqeX8">
-</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jc_bGfCqeX8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-<iframe width="420" height="345" src="https://www.youtube.com/watch?v=stRfkynR34A&t=47s">
-</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/988xRZyaGMs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-<iframe width="420" height="345" src="https://www.youtube.com/watch?v=988xRZyaGMs">
-</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/stRfkynR34A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 <div id="footer">
   <p style="margin-left:20px;margin-top:5px;"> Die Dodoreiter
