--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="https://diedodoreiter.github.io">Home</a></li>
                 <li><a href="https://diedodoreiter.github.io/bestenliste.html">Bestenliste</a></li>
+                <li><a href="https://diedodoreiter.github.io/videos.html">Videos</a></li>
                 <!--<li><a href="https://diedodoreiter.github.io/telegram.html" target="_blank">Telegram</a></li>-->
             </ul>
         </div>
