--- a/videos.html
+++ b/videos.html
@@ -32,6 +32,12 @@
         width: 100%;
         border-top-style: solid;
     }
+    #videos{
+      background-image: url('swords.png');
+      background-repeat:no-repeat;
+      background-size:contain;
+      background-position: center;
+    }
     br {
         line-height: 20%;
      }
@@ -61,43 +67,26 @@
         </div>
         <div class="collapse navbar-collapse" id="collapse">
             <ul class="nav navbar-nav">
-              <li> <a href="https://diedodoreiter.github.io">Home</a></li>
-              <li class="active"><a href="https://diedodoreiter.github.io/bestenliste.html">Bestenliste</a></li>
-              <li><a href="https://diedodoreiter.github.io/videos.html">Videos</a></li>
+                <li> <a href="https://diedodoreiter.github.io">Home</a></li>
+                <li><a href="https://diedodoreiter.github.io/bestenliste.html">Bestenliste</a></li>
+                <li class="active"><a href="https://diedodoreiter.github.io/videos.html">Videos</a></li>
                 <!--<li><a href="https://diedodoreiter.github.io/telegram.html" target="_blank">Telegram</a></li>-->
             </ul>
         </div>
     </div>
 </nav>
 
-
-<div class="container">
-    <div class="jumbotron" id="myimg">
-        <h1>Bestenliste</h1>
-        <table class="table table-dark" id="tableBest">
-            <thead>
-            <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Datum</th>
-                <th scope="col">Kronen für den Clan</th>
-            </tr>
-            <tr>
-                <td>Jan</td>
-                <td>28.01.2018</td>
-                <td>126</td>
-            </tr>
-            <tr>
-                <td>Killerxd</td>
-                <td>21.01.2018</td>
-                <td>99</td>
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-</div>
 <div style="margin-bottom:100px" align="center" id="videos">
 <hr id="hr">
+<h2 style="text-align: center;">Best of:</h2>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3zsWwyIYXdM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jc_bGfCqeX8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen ></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/988xRZyaGMs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/stRfkynR34A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
 <div id="footer">
   <p style="margin-left:20px;margin-top:5px;"> Die Dodoreiter
