--- a/bestenliste.html
+++ b/bestenliste.html
@@ -96,7 +96,7 @@
             </tbody>
         </table>
 </div>
-<div style="margin-bottom:100px" align="center" id="videos">
+<div style="margin-bottom:100px" align="center">
 <hr id="hr">
 </div>
 <div id="footer">
