--- a/videos.html
+++ b/videos.html
@@ -49,7 +49,7 @@
   	overflow:hidden;
   }
 
-.video-container iframe, .video-container object, .video-container embed {
+.video-container iframe, .video-container embed {
   	position:center;
   	top:0;
   	left:0;
