--- a/videos.html
+++ b/videos.html
@@ -100,13 +100,13 @@
 <hr id="hr">
 <h2 style="text-align: center;">Best of:</h2>
 
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/3zsWwyIYXdM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/3zsWwyIYXdM" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
 
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/jc_bGfCqeX8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen ></iframe></div>
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/jc_bGfCqeX8" frameborder="0" allow=" encrypted-media" allowfullscreen ></iframe></div>
 
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/988xRZyaGMs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/988xRZyaGMs" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
 
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/stRfkynR34A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/stRfkynR34A" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
 </div>
 <div id="footer">
   <p style="margin-left:20px;margin-top:5px;"> Die Dodoreiter
