--- a/videos.html
+++ b/videos.html
@@ -38,26 +38,7 @@
       background-size:contain;
       background-position: center;
     }
-    .video-container {
-  	position:relative;
-  	padding-bottom:56.25%;
-  	padding-top:30px;
-  	height:0;
-    margin-left:10px;
-    margin-right:10px;
-    margin-bottom:25px;
-  	overflow:hidden;
-  }
 
-.video-container iframe, .video-container embed {
-  	position:center;
-  	top:0;
-  	left:0;
-  	width:100%;
-  	height:100%;
-    max-width:1112px;
-    max-height:630px;
-  }
     br {
         line-height: 20%;
      }
@@ -100,13 +81,13 @@
 <hr id="hr">
 <h2 style="text-align: center;">Best of:</h2>
 
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/3zsWwyIYXdM" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
+<iframe  width="392" height="220" src="https://www.youtube.com/embed/3zsWwyIYXdM" frameborder="0" allow="autoplay encrypted-media" allowfullscreen></iframe>
 
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/jc_bGfCqeX8" frameborder="0" allow=" encrypted-media" allowfullscreen ></iframe></div>
+<iframe width="392" height="220" src="https://www.youtube.com/embed/jc_bGfCqeX8" frameborder="0" allow="autoplay encrypted-media" allowfullscreen ></iframe>
 
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/988xRZyaGMs" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
+<iframe  width="392" height="220" src="https://www.youtube.com/embed/988xRZyaGMs" frameborder="0" allow="autoplayautoplay encrypted-media" allowfullscreen></iframe>
 
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/stRfkynR34A" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
+<iframe  width="392" height="220" src="https://www.youtube.com/embed/stRfkynR34A" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe>
 </div>
 <div id="footer">
   <p style="margin-left:20px;margin-top:5px;"> Die Dodoreiter
