--- a/videos.html
+++ b/videos.html
@@ -38,6 +38,22 @@
       background-size:contain;
       background-position: center;
     }
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 25px;
+}
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
     br {
         line-height: 20%;
@@ -48,7 +64,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bestenliste</title>
+    <title>Videos</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -81,13 +97,13 @@
 <hr id="hr">
 <h2 style="text-align: center;">Best of:</h2>
 
-<iframe  width="392" height="220" src="https://www.youtube.com/embed/3zsWwyIYXdM" frameborder="0" allow="autoplay encrypted-media" allowfullscreen></iframe>
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/3zsWwyIYXdM" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
 
-<iframe width="392" height="220" src="https://www.youtube.com/embed/jc_bGfCqeX8" frameborder="0" allow="autoplay encrypted-media" allowfullscreen ></iframe>
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/jc_bGfCqeX8" frameborder="0" allow=" encrypted-media" allowfullscreen ></iframe></div>
 
-<iframe  width="392" height="220" src="https://www.youtube.com/embed/988xRZyaGMs" frameborder="0" allow="autoplayautoplay encrypted-media" allowfullscreen></iframe>
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/988xRZyaGMs" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
 
-<iframe  width="392" height="220" src="https://www.youtube.com/embed/stRfkynR34A" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe>
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/stRfkynR34A" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
 </div>
 <div id="footer">
   <p style="margin-left:20px;margin-top:5px;"> Die Dodoreiter
