--- a/videos.html
+++ b/videos.html
@@ -48,11 +48,12 @@
     margin-bottom: 25px;
 }
 .video-container iframe {
-    position: absolute;
+    position: center;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    max-width:1000px;
 }
 
     br {
