--- a/videos.html
+++ b/videos.html
@@ -48,7 +48,7 @@
     margin-bottom: 25px;
 }
 .video-container iframe {
-    position: center;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
