--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                               <li>Du willst unserem Clan beitreten? Das benötigst du dafür: </li>
                                   <ul >
                                     <li>Freundlich sein</li>
-                                     <li>Spenden</li>
-                                    <li>Aktiv</li>
+                                     <li>Spenden (mind. 100/Woche)</li>
+                                    <li>Aktiv (mind. 20 Kronen pro Clantruhe)</li>
                                  </ul>
                               <li>Jeder der die oben genannten Kriterien erfüllt ist willkommen!</li>
                              </ul>
@@ -142,7 +142,8 @@
                         </div>
                         <div class="modal-body">
                             <ul>
-                                <li >Jedes Mitglied macht mindestens 20 Kronen bei der Clantruhe, außer:
+                                <li>Jeder spendet 100 Einheiten pro Woche.</li>
+                                <li >Jeder macht mindestens 20 Kronen bei der Clantruhe, außer:
                                     <ul >
                                         <li>Krankheit</li>
                                         <li>Urlaub</li>
