--- a/bestenliste.html
+++ b/bestenliste.html
@@ -96,6 +96,11 @@
                 <td>21.01.2018</td>
                 <td>99</td>
             </tr>
+            <tr>
+                <td>Peter-ok</td>
+                <td>11.02.2018</td>
+                <td>93</td>
+            </tr>
             </thead>
             <tbody>
             </tbody>
