--- a/bestenliste.html
+++ b/bestenliste.html
@@ -87,6 +87,11 @@
                 <td>126</td>
             </tr>
             <tr>
+                <td>the king</td>
+                <td>18.02.2018</td>
+                <td>120</td>
+            </tr>
+            <tr>
                 <td><<<<<<*>>>>>></td>
                 <td>04.02.2018</td>
                 <td>102</td>
