--- a/bestenliste.html
+++ b/bestenliste.html
@@ -82,6 +82,11 @@
                 <th scope="col">Kronen für den Clan</th>
             </tr>
             <tr>
+                <td>Hodenkobold</td>
+                <td>25.02.2018</td>
+                <td>203</td>
+            </tr>
+            <tr>
                 <td>Jan</td>
                 <td>28.01.2018</td>
                 <td>126</td>
