--- a/bestenliste.html
+++ b/bestenliste.html
@@ -87,6 +87,11 @@
                 <td>203</td>
             </tr>
             <tr>
+                <td>the king</td>
+                <td>05.03.2018</td>
+                <td>136</td>
+            </tr>
+            <tr>
                 <td>Jan</td>
                 <td>28.01.2018</td>
                 <td>126</td>
