--- a/bestenliste.html
+++ b/bestenliste.html
@@ -102,6 +102,11 @@
                 <td>120</td>
             </tr>
             <tr>
+                <td>Peter-ok</td>
+                <td>12.03.2018</td>
+                <td>115</td>
+            </tr>
+            <tr>
                 <td><<<<<<*>>>>>></td>
                 <td>04.02.2018</td>
                 <td>102</td>
