--- a/videos.html
+++ b/videos.html
@@ -94,9 +94,9 @@
 <hr id="hr">
 <h2 style="text-align: center;">Best of:</h2>
 
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/3zsWwyIYXdM" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/W2-NRwE6yB8" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
 
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/jc_bGfCqeX8" frameborder="0" allow=" encrypted-media" allowfullscreen ></iframe></div>
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/kpz4xnhqb5k" frameborder="0" allow=" encrypted-media" allowfullscreen ></iframe></div>
 
 <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/988xRZyaGMs" frameborder="0" allow=" encrypted-media" allowfullscreen></iframe></div>
 
