--- a/bestenliste.html
+++ b/bestenliste.html
@@ -87,9 +87,19 @@
                 <td>203</td>
             </tr>
             <tr>
+                <td>Cleba</td>
+                <td>02.04.2018</td>
+                <td>152</td>
+            </tr>
+            <tr>
                 <td>the king</td>
                 <td>05.03.2018</td>
                 <td>136</td>
+            </tr>
+            <tr>
+                <td>Hodenkobold</td>
+                <td>19.03.2018</td>
+                <td>134</td>
             </tr>
             <tr>
                 <td>Jan</td>
@@ -120,6 +130,11 @@
                 <td>Peter-ok</td>
                 <td>11.02.2018</td>
                 <td>93</td>
+            </tr>
+            <tr>
+                <td>the king</td>
+                <td>26.03.2018</td>
+                <td>87</td>
             </tr>
             </thead>
             <tbody>
